update swagger (#4)
